# pyslingshot

./: .gitignore  .pre-commit-config.yaml  README.md  fakedata-1branch.npy  fakedata-2branch.npy  princurve.ipynb  pyproject.toml  setup.py  slingshot.ipynb
.github/workflows/: lint.yml
pyslingshot/: __init__.py  lineage.py  plotter.py  slingshot.py  util.py
slingshot/: interp1d.py  lineage.py  plotter.py  slingshot.py  util.py
src/slingshot/: __init__.py  slingshot.py
tests/: __init__.py  conftest.py  test_slingshot.py  test_util.py
