[tool.poetry]
name = "pyslingshot"
version = "0.1.0"
description = "Python implementation of the Slingshot pseudotime algorithm"
authors = ["Jacob Moss <cob.mossy@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mossjacob/pyslingshot"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.7.0"
numpy = "^1.26.2"
seaborn = "^0.13.0"
pcurvepy2 = "^0.1.3"
tqdm = "^4.66.1"
notebook = "^7.0.6"
scikit-learn = "^1.3.2"
networkx = "^3.2.1"
anndata = "^0.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
