[tool.poetry]
name = "pyslingshot"
version = "0.1.3"
description = "Python implementation of the Slingshot pseudotime algorithm"
authors = ["Jacob Moss <cob.mossy@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mossjacob/pyslingshot"

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.6.0"
numpy = "^1.23.0"
seaborn = "^0.12.0"
pcurvepy2 = "0.1.5"
tqdm = "*"
notebook = "*"
scikit-learn = "*"
networkx = "*"
anndata = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
