[project]
name = "pyslingshot"
version = "0.2.0"
description = "Python implementation of the Slingshot pseudotime algorithm"
authors = [{ name = "Jacob Moss", email = "cob.mossy@gmail.com" }]
requires-python = ">=3.9"
readme = "README.md"
license = "MIT"
dependencies = [
    "matplotlib>=3.6.0,<4",
    "numpy>=1.23.0,<2",
    "seaborn>=0.12.0",
    "pcurvepy2>=0.2.1",
    "tqdm",
    "notebook",
    "scikit-learn",
    "networkx",
    "anndata>=0.10.9",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Repository = "https://github.com/mossjacob/pyslingshot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "C408",  # unnecessary dict/list/tuple call - allow for clarity
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "pcurvepy2.*",
    "sklearn.*",
    "scipy.*",
    "seaborn.*",
    "matplotlib.*",
    "networkx.*",
    "anndata.*",
]
ignore_missing_imports = true
